modules/015-admission-policy-engine/hooks/testdata/required_constraint_templates/valid/templates/operation/tests/priority-class/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed
  namespace: default
spec:
  priorityClassName: "foo"
  containers:
    - name: nginx
      image: nginx
