modules/015-admission-policy-engine/hooks/testdata/required_constraint_templates/valid/templates/operation/tests/priority-class/disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed
  namespace: default
spec:
  priorityClassName: "bar"
  containers:
    - name: nginx
      image: nginx
