modules/015-admission-policy-engine/hooks/testdata/required_constraint_templates/valid/templates/operation/tests/priority-class/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8priorityclass
tests:
  - name: d8priorityclass
    template: ../../priority-class.yaml
    constraint: constraint.yaml
    cases:
      - name: example-allowed
        object: allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        object: disallowed.yaml
        assertions:
          - violations: yes
            message: >-
              Pod <disallowed> has invalid priority class: bar
